--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -17,3 +17,32 @@ body {
   .form-group {
     margin-bottom: 5px;
   }
+  .centered {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+.col-md-6 {
+    padding: 0 40px;
+}
+
+.btn-sm {
+    padding: 2px 6px;
+}
+
+.form-control {
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ul li {
+    list-style: none;
+    padding: 5px 0;
+}
+
+.devoured {
+    list-style: none;
+    margin-left: 20px;
+    color: rgb(70, 27, 2);
+}
