--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -25,6 +25,9 @@ body {
 .col-md-6 {
     padding: 0 40px;
 }
+#modal {
+  color: black;
+}
 
 .btn-sm {
     padding: 2px 6px;
@@ -35,14 +38,12 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-
-ul li {
-    list-style: none;
-    padding: 5px 0;
-}
-
 .devoured {
     list-style: none;
     margin-left: 20px;
     color: rgb(70, 27, 2);
+}
+
+ul li {
+  list-style: none;
 }
