--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,9 +8,10 @@
 </head>
 <body>
 	{{{ body }}}
-		<script src="https://code.jquery.com/jquery.js"></script>
+		{{!-- <script src="https://code.jquery.com/jquery.js"></script> --}}
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
     	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+		<script src="/assets/js/burger_script.js" type="text/javascript"></script>
 </body>
 </html>
